--- a/frontend/src/app/components/pages/month-income/month-income.component.css
+++ b/frontend/src/app/components/pages/month-income/month-income.component.css
@@ -27,7 +27,7 @@ nav .selected {
     display: flex;
     justify-content: space-evenly;
     /* border: solid 1px black; */
-    margin: 1rem;
+    margin: 1rem 2rem; 
     padding: 1rem;
 }
 
@@ -37,4 +37,9 @@ nav .selected {
 
 .sheet .title {
     margin-left: 2rem;
+}
+
+.sheet .vertical-line {
+    border-left: 3px solid #aaa;
+    height: 60vh;
 }
