--- a/frontend/src/app/components/pages/month-income/month-income.component.html
+++ b/frontend/src/app/components/pages/month-income/month-income.component.html
@@ -5,13 +5,20 @@
         <a routerLink="/income/performance" [ngClass]="{'selected': tab=='performance'}">Performance</a>
     </nav>
     <div *ngIf="tab=='sheet'" class="sheet">
-        <div>
+        <div class="column">
             <div class="title">Income</div>
-            <app-item></app-item>
+            <div *ngFor="let item of assets">
+                <app-item [itemInfo]="item"></app-item>
+            </div>
+            <button>Add Item</button>
         </div>
-        <div>
+        <div class="vertical-line"></div>
+        <div class="column">
             <div class="title">Expenses</div>
-            <app-item></app-item>
+            <div *ngFor="let item of liabilities">
+                <app-item [itemInfo]="item"></app-item>
+            </div>
+            <button>Add Item</button>
         </div>
     </div>
 </div>
