add amplify auth

--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -3,10 +3,10 @@
         <a routerLink="/">FIN Analytics</a>
     </div>
     <nav>
-        <a routerLink="/">Home</a>
-        <a routerLink="/portfolio">Portfolio</a>
-        <a routerLink="/balance">Balance Sheet</a>
         <a routerLink="/income">Income Statement</a>
-        <a routerLink="/news">Stock Market News</a>
+        <a routerLink="/profile">Profile</a>
+        <!-- <a routerLink="/portfolio">Portfolio</a>
+        <a routerLink="/balance">Balance Sheet</a> -->
+        <!-- <a routerLink="/news">Stock Market News</a> -->
     </nav>
 </div>
