changed main dir

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<app-header></app-header>
 <amplify-authenticator>
   <ng-template
     amplifySlot="authenticated"
     let-user="user"
     let-signOut="signOut"
   >
+        <app-header></app-header>
         <router-outlet></router-outlet>
-    <button (click)="signOut()">Sign Out</button>
+    <button (click)="signOut()">Sign Out (to be customized)</button>
   </ng-template>
 </amplify-authenticator>
