--- a/src/app/components/partials/header/header.component.css
+++ b/src/app/components/partials/header/header.component.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    /* border: 2px solid hsl(190, 82%, 53%); */
     border: 2px solid black;
     border-radius: 0.2rem;
     margin: 2rem 1rem;
@@ -13,7 +14,8 @@
 }
 
 a {
-    color: #666;
+    /* color: #666; */
+    color: hsl(210, 25%, 25%);
 }
 
 a:hover{
